Add swagger doc to Category endpoint
